tests/negative_tests/basics/illegalFunc.sa
module illegalFunc where
    x : Bool -> Bool
    x = \b1 . True

    y : Bool
    y = x True False